--- a/activity 4/index.html
+++ b/activity 4/index.html
@@ -11,6 +11,7 @@
             <li><a href="index.html">Activity 2</a></li>
             <li><a href="index.html">Activity 3</a></li>
             <li><a href="index.html">Activity 4</a></li>
+            <li><a href="index.html">Activity 5</a></li>
         </ul>
 
     </head>
