--- a/activity 5/index.html
+++ b/activity 5/index.html
@@ -5,7 +5,7 @@
         <title>The Best Atom Packages for front End Developers</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="https//fonts.googleapis.com/css?family=Open+Sans">
-        <link rel="stylesheet" type="text/css" href="css/master.css">
+        <link rel="stylesheet" type="text/css" href="master.css">
     </head>
     <body>
         <header>
@@ -47,6 +47,7 @@
                 </footer>
                 </div>
         </main>
-        <script src="js/scripts.js"></script>
+        
+        <script src="js/scripts.js" charset="utf-8"></script>
     </body>
 </html>
